--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arya&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rules</title>
+    <title>Avishkar Test</title>
 </head>
 
 <style media="screen and (max-width: 977px)">
@@ -45,13 +45,14 @@
     .con li {
         font-size: .7rem;
         margin-left: 20px;
-        width: 100vh;
+        width: 70vw;
     }
 
     li.oe {
         margin-left: 90px;
     }
 </style>
+
 <style>
     * {
         margin: 0;
@@ -178,7 +179,7 @@
 
     .box {
         background-color: rgb(240, 221, 186);
-        width: 80%;
+        width: 80vw;
         margin: 0% 10%;
         text-align: justify;
         padding-right: 5px;
@@ -198,17 +199,16 @@
         top: -35px;
     }
 
-    .ce{
+    .ce {
         top: -35px;
         left: 130px;
     }
-
 </style>
 
 <body>
     <div class="head">
         <div class="item item1">
-            <img src="logo.jpg" class="logo" alt="P.D.E.A" />
+            <img src="http://pdeapune.org/image/logohd.jpg" class="logo" alt="P.D.E.A" />
             <div class="namee">
                 <p class="p">पुणे जिल्हा शिक्षण मंडळ , पुणे</p>
                 <p class="p">Pune District Education Association, Pune</p>
@@ -218,43 +218,43 @@
         <div class="item item2">
             <header id="header">
                 <ul>
-                    <li><a href="https://architadhole.github.io/Home/">Home</a></li>
+                    <li><a href="1home.html">Home</a></li>
                     <li>
                         About Us
                         <ul>
-                            <li><a href="https://architadhole.github.io/Vision/">Vision</a></li>
-                            <li><a href="https://architadhole.github.io/Mission/">Mission</a></li>
+                            <li><a href="2vision.html">Vision</a></li>
+                            <li><a href="3mission.html">Mission</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://architadhole.github.io/Committee/">Committee</li></a>
+                    <li><a href="4committee.html">Committee</li></a>
                     <li>School
                         <ul>
-                            <li><a href="https://architadhole.github.io/Facilities/">Facilites</a></li>
-                            <li><a href="https://architadhole.github.io/Rules/">Rules</a></li>
+                            <li><a href="5facilities.html">Facilites</a></li>
+                            <li><a href="6rules.html">Rules</a></li>
                         </ul>
                     </li>
                     <li>
                         Admission
                         <ul>
-                            <li><a href="https://architadhole.github.io/Pre-Primary/">Pre-Primary</a></li>
-                            <li><a href="https://architadhole.github.io/Primary/">Primary</a></li>
-                            <li class="nbt"><a href="https://architadhole.github.io/Secondary/">Secondary</a></li>
+                            <li><a href="7preprimary.html">Pre-Primary</a></li>
+                            <li><a href="8primary.html">Primary</a></li>
+                            <li class="nbt"><a href="9secondary.html">Secondary</a></li>
                         </ul>
                     </li>
                     <li>Exams
                         <ul>
-                            <li><a href="https://architadhole.github.io/Evaluation/">Evaluation</a></li>
+                            <li><a href="10evaluation.html">Evaluation</a></li>
                             <li>Other Exams
                                 <ul>
-                                    <li class="oe"><a href="https://architadhole.github.io/Avishkar/">Avishkar Test</a></li>
-                                    <li class="oe"><a href="https://architadhole.github.io/Sambodh/">Sambodh Exam</a></li>
+                                    <li class="oe"><a href="11avishkar.html">Avishkar Test</a></li>
+                                    <li class="oe"><a href="12sambodh.html">Sambodh Exam</a></li>
                                 </ul>
                             </li>
                             <li class="nbt">Compititive Exams
                                 <ul>
-                                    <li class="ce"><a href="https://architadhole.github.io/Scholarship/">Scholarship Exam</a></li>
-                                    <li class="ce"><a href="https://architadhole.github.io/Drawing/">Drawing Grade</a></li>
-                                    <li class="nbt ce"><a href="https://architadhole.github.io/Olympaid/">Olympaid</a></li>
+                                    <li class="ce"><a href="13scholar.html">Scholarship Exam</a></li>
+                                    <li class="ce"><a href="14drawing.html">Drawing Grade</a></li>
+                                    <li class="nbt ce"><a href="15olympaid.html">Olympaid</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -262,13 +262,13 @@
                     <li>
                         Achievements
                         <ul>
-                            <li><a href="https://architadhole.github.io/SSC/">SSC Results</a></li>
-                            <li><a href="https://architadhole.github.io/HSC/">HSC Results</a></li>
-                            <li class="nbt"><a href="https://architadhole.github.io/Sports/">Sports</a></li>
+                            <li><a href="16ssc.html">SSC Results</a></li>
+                            <li><a href="17hsc.html">HSC Results</a></li>
+                            <li class="nbt"><a href="18sports.html">Sports</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://architadhole.github.io/Gallery/">Gallery</a></li>
-                    <li><a href="https://architadhole.github.io/Contact/">Contact Us</a></li>
+                    <li><a href="19gallery.html">Gallery</a></li>
+                    <li><a href="19contact.html">Contact Us</a></li>
                 </ul>
             </header>
         </div>
